调整图片地址

--- a/MarkDown/插入图片.md
+++ b/MarkDown/插入图片.md
@@ -23,6 +23,8 @@
 - 高级用法  
 \!\[avatar\]\[base64str\]  
 \[base64str\]:data:image/png;base64,iVBORw0......  
-> 通过id引用, 把base64字符串放最底下。
+> 通过id引用, 把base64字符串放最底下。  
 
-![test](/kokoiszkr/note/blob/master/image/test.png)
+
+
+![test](../image/test.png)
